--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,19 +2,20 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rogeriomattos.github.io/hunting-words/",
+  "homepage": "https://rogeriomattos.github.io/hunting-words-game",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "gh-pages": "^2.2.0",
+    "hunting-words": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "deploy":"npm run build && cd node_modules && cd .bin && gh-pages -d ../../build",
+    "deploy": "npm run build && cd node_modules && cd .bin && gh-pages -d ../../build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
